--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Horizon-admin",
+  "name": "Gestion Voyage-admin",
   "version": "3.2.0",
   "scripts": {
     "dev": "vite   --port 8080",
